; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqformat.c_pq_sendfloat4.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqformat.c_pq_sendfloat4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.anon = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pq_sendfloat4(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %union.anon, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = bitcast %union.anon* %5 to i32*
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* %3, align 4
  %9 = bitcast %union.anon* %5 to i32*
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @pq_sendint32(i32 %8, i32 %10)
  ret void
}

declare dso_local i32 @pq_sendint32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
